Update styles, add Trivy article, and refine uses page
- Revamp SCSS: improve heading sizes, add Rose Pine accent colors,
  update font stacks, and enhance theme color handling
- Add new article: "Using Trivy to Scan Images for CVEs"
- Refine /uses page: update software/tools, clarify inspiration,
  and update hardware/software lists
- Fix config: tweak logo text and footer, remove Netlify mention
- Change article template to use h1 for post titles

--- a/config.yaml
+++ b/config.yaml
@@ -51,12 +51,12 @@ params:
   enableThemeToggle: true
 
   logo:
-    logoText: $ cd /home/
+    logoText: cd /home/
     logoHomeLink: "/"
     logoCursorColor: "#9ccfd8"
 
   footerLeft: "The website of <a rel='me' href='https://mastodon.social/@_raygervais'>RayGervais</a>"
-  footerRight: "Powered by <a href='https://gohugo.io/'>Hugo</a>, <a href='https://netlify.com'>Netlify</a>, and <a href='htts://github.com'>GitHub</a>"
+  footerRight: "Powered by <a href='https://gohugo.io/'>Hugo</a> and <a href='htts://github.com'>GitHub</a>"
 
 imaging:
   resampleFilter: "box"
